--- a/views/header.html
+++ b/views/header.html
@@ -65,7 +65,7 @@
             <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-haspopup="true" aria-expanded="false">DACs <span class="caret"></span></a>
             <ul class="dropdown-menu" aria-labelledby="drop3">
               <li>
-                <a href="//gliders.ioos.us/" target="_blank">Glider DAC</a>
+                <a href="//gliders.ioos.us/data/" target="_blank">Glider DAC</a>
               </li>
               <li>
                 <a href="//hfradar.ioos.us/" target="_blank">HF Radar DAC</a>
