Change routing and links from /comt to comt.ioos.us

--- a/views/comt/dataset.jade
+++ b/views/comt/dataset.jade
@@ -5,9 +5,9 @@ block body
     div.row
       ol.breadcrumb
         li
-          a(href='/comt')= 'Coastal and Ocean Modeling Testbed'
+          a(href='/')= 'Coastal and Ocean Modeling Testbed'
         li
-          a(href='/comt/projects/' + title_key + '#sub-project-descriptions-data')= projectTitle
+          a(href='/projects/' + title_key + '#sub-project-descriptions-data')= projectTitle
         li.active
           !{subProjectTitle}
     div.row
