--- a/views/header.html
+++ b/views/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container-fluid">
-    <a href="/">
+    <a href="https://ioos.us">
       <img src="/images/IOOS_Emblem_Tertiary_B_RGB.png">
     </a>
   </div>
@@ -13,14 +13,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="https://ioos.us">
           <img alt="Brand" alt="IOOS logo" src="/images/logo-navbar.png">
         </a>
       </div> <!-- .navbar-header -->
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav">
           <li class="brand">
-            <a href="/">
+            <a href="https://ioos.us">
               <img alt="Brand" alt="IOOS logo" src="/images/logo-navbar.png">
             </a>
           </li>
@@ -40,7 +40,7 @@
                 <a href="https://www.nodc.noaa.gov/ioos/" target="_blank">IOOS Archive Data Portal</a>
               </li>
               <li>
-                <a href="/comt">Coastal and Ocean Modeling Testbed</a>
+                <a href="https://comt.ioos.us">Coastal and Ocean Modeling Testbed</a>
               </li>
             </ul>
           </li>
