added video portal tile

--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@
               <h1>Live Surf Camera</h1>
             </div>
           </a>
-          <a class="grid-item onextwo regional-associations orange" href="/regions">
+          <a class="grid-item onexone regional-associations orange" href="/regions">
             <div class="tile-wrap">
               <h1>Regional Associations</h1>
             </div>
@@ -89,7 +89,12 @@
               <h1>Data Demo Center</h1>
             </div>
           </a>
-          <a class="grid-item twoxone hf-radar" href="//hfradar.ioos.us">
+          <a class="grid-item twoxone video-portal" href="video.ioos.us">
+            <div class="tile-wrap">
+              <h1>Video Portal</h1>
+            </div>
+          </a>
+          <a class="grid-item onexone hf-radar" href="//hfradar.ioos.us">
             <div class="tile-wrap">
               <h1>HF Radar</h1>
             </div>
