july 2021 tile updates

--- a/views/index.html
+++ b/views/index.html
@@ -47,10 +47,15 @@
               <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
             </div>
           </a>
-          <a class="grid-item onexone data-discovery aqua" href="https://data.ioos.us">
+          <a class="grid-item onexone regional-associations orange" href="/regions">
             <div class="tile-wrap">
-              <h1>Data Discovery</h1>
-              <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+              <h1>Regional Associations</h1>
+            </div>
+          </a>
+          <a class="grid-item twoxone data-discovery aqua" href="https://data.ioos.us">
+            <div class="tile-wrap">
+              <h1>IOOS Data Catalog</h1>
+              <!-- <span class="glyphicon glyphicon-search" aria-hidden="true"></span> -->
             </div>
           </a>
           <a class="grid-item twoxone glider-dac" href="https://gliders.ioos.us/">
@@ -58,7 +63,7 @@
               <h1>Profiling Gliders</h1>
             </div>
           </a>
-          <a class="grid-item twoxtwo sensor-map" href="https://sensors.ioos.us/">
+          <a class="grid-item twoxone sensor-map" href="https://sensors.ioos.us/">
             <div class="tile-wrap">
               <h1>Environmental Sensor Map</h1>
             </div>
@@ -88,17 +93,12 @@
               <h1>Video Portal</h1>
             </div>
           </a>
-          <a class="grid-item onexone regional-associations orange" href="/regions">
-            <div class="tile-wrap">
-              <h1>Regional Associations</h1>
-            </div>
-          </a>
           <a class="grid-item onexone data-demo-center" href="https://ioos.github.io/notebooks_demos/" target="_blank">
             <div class="tile-wrap">
               <h1>Data Demo Center</h1>
             </div>
           </a>
-          <a class="grid-item twoxone hf-radar" href="//hfradar.ioos.us">
+          <a class="grid-item onexone hf-radar" href="//hfradar.ioos.us">
             <div class="tile-wrap">
               <h1>HF Radar</h1>
             </div>
@@ -109,12 +109,12 @@
               <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
             </div>
           </a>
-          <a class="grid-item twoxone osmc" href="//osmc.ioos.us">
+          <a class="grid-item onexone osmc" href="//osmc.ioos.us">
             <div class="tile-wrap">
               <h1>NOAA Observing System Monitoring Center</h1>
             </div>
           </a>
-          <a class="grid-item twoxone ocean-acidification" href="//oa.ioos.us">
+          <a class="grid-item onexone ocean-acidification" href="//oa.ioos.us">
             <div class="tile-wrap">
               <h1>Ocean Acidification</h1>
             </div>
