--- a/public/css/main.css
+++ b/public/css/main.css
@@ -369,6 +369,10 @@ button#search-data-button.btn.btn-default.open span::before
     margin-top: 33%;
   }
 
+  a.grid-item.data-discovery .tile-wrap h1 {
+    margin-top: 14%;
+  }
+
   a.grid-item.compliance-checker .tile-wrap h1 {
     margin-top: 33%;
   }
@@ -383,15 +387,15 @@ button#search-data-button.btn.btn-default.open span::before
   }
 
   a.grid-item.hf-radar .tile-wrap h1 {
-    margin-top: 16%;
+    margin-top: 33%;
   }
 
   a.grid-item.osmc .tile-wrap h1 {
-    margin-top: 16%;
+    margin-top: 35%;
   }
 
   a.grid-item.ocean-acidification .tile-wrap h1 {
-    margin-top: 18%;
+    margin-top: 40%;
   }
 
   a.grid-item.video-portal .tile-wrap h1 {
@@ -458,7 +462,7 @@ button#search-data-button.btn.btn-default.open span::before
   }
 
   a.grid-item.sensor-map .tile-wrap h1 {
-    margin-top: 36% !important;
+    margin-top: 14% !important;
   }
 }
 
@@ -516,7 +520,7 @@ a.glider-dac {
 }
 
 a.sensor-map {
-  background-image      : url("/images/all-stations.png");
+  background-image      : url("/images/all-stations-new.png");
 }
 
 a.ioos-eds {
@@ -548,17 +552,17 @@ a.data-demo-center {
 
 a.hf-radar {
   background-image    : url("/images/codar-combined-TX_RX_2_2.jpg");
-  background-size     : 150%;
+  background-size     : 215%;
 }
 
 a.osmc {
   background-image    : url("/images/osmc-tile.png");
-  background-size     : 100%;
+  background-size     : 155%;
 }
 
 a.ocean-acidification {
   background-image    : url("/images/ocean-acidification.png");
-  background-size     : 120%;
+  background-size     : 235%;
 }
 
 a.atn {
@@ -568,6 +572,16 @@ a.atn {
 
 a.video-portal {
   background-image    : url("/images/video_portal.png");
+  background-size     : 134%;
+}
+
+a.data-discovery {
+  background-image    : url("/images/new-data-catalog.jpg");
+  background-size     : 100%;
+}
+
+a.regional-associations {
+  background-image    : url("/images/r-a-tile-2.png");
   background-size     : 134%;
 }
 
