Date demo center update-2

--- a/views/index.html
+++ b/views/index.html
@@ -95,7 +95,7 @@
           </a>
           <a class="grid-item onexone data-demo-center" href="https://ioos.github.io/notebooks_demos/" target="_blank">
             <div class="tile-wrap">
-              <h1>Data Demo Center</h1>
+              <h1>CodeLab</h1>
             </div>
           </a>
           <a class="grid-item onexone hf-radar" href="//hfradar.ioos.us">
