fixed codelab url

--- a/views/index.html
+++ b/views/index.html
@@ -93,7 +93,7 @@
               <h1>Video Portal</h1>
             </div>
           </a>
-          <a class="grid-item onexone data-demo-center" href="https://ioos.github.io/notebooks_demos/" target="_blank">
+          <a class="grid-item onexone data-demo-center" href="https://ioos.github.io/ioos_code_lab/content/intro.html" target="_blank">
             <div class="tile-wrap">
               <h1>CodeLab</h1>
             </div>
