--- a/views/index.html
+++ b/views/index.html
@@ -41,20 +41,25 @@
               <h1>IOOS Model Viewer</h1>
             </div>
           </a>
+          <a class="grid-item onexone sanct-sound" href="#" target="_blank">
+            <div class="tile-wrap">
+              <h1>SanctSound</h1>
+            </div>
+          </a>
           <a class="grid-item onexone metrics orange" href="//ioos.noaa.gov/about/ioos-by-the-numbers/" target="_blank">
             <div class="tile-wrap">
               <h1>IOOS By The Numbers</h1>
               <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
             </div>
           </a>
+          <a class="grid-item onexone glider-dac" href="https://gliders.ioos.us/">
+            <div class="tile-wrap">
+              <h1>Profiling Gliders</h1>
+            </div>
+          </a>
           <a class="grid-item onexone regional-associations orange" href="/regions">
             <div class="tile-wrap">
               <h1>Regional Associations</h1>
-            </div>
-          </a>
-          <a class="grid-item twoxone glider-dac" href="https://gliders.ioos.us/">
-            <div class="tile-wrap">
-              <h1>Profiling Gliders</h1>
             </div>
           </a>
           <a class="grid-item twoxone data-discovery aqua" href="https://data.ioos.us">
