--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
           </a>
           <a class="grid-item onexone sanct-sound" href="#" target="_blank">
             <div class="tile-wrap">
-              <h1>SanctSound</h1>
+              <h1>Sanctuary Soundscape <br />(SanctSound)</h1>
             </div>
           </a>
           <a class="grid-item onexone metrics orange" href="//ioos.noaa.gov/about/ioos-by-the-numbers/" target="_blank">
