changed Regional Portals title

--- a/views/index.html
+++ b/views/index.html
@@ -125,10 +125,10 @@
       <div class="flip-box-regional-associations col-md-3">
         <div class="flip-box-inner-regional-associations new-design">
           <div class="flip-box-front-regional-associations">
-            <h1>Regional Associations</h1>
+            <h1>Regional Portals</h1>
           </div>
           <div class="flip-box-back-regional-associations">
-            <h2>Regional Associations</h2>
+            <h2>Regional Portals</h2>
             <p>Click here to view an interactive map of all of IOOS regional associations.</p>
             <button><a href="https://ioos.us/regions">Learn More</a></button>
           </div>
