--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 <div id="grid-container" class="container">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-6 col-xs-offset-3" style="padding-bottom: 8px;">
+      <div class="col-md-6 col-md-offset-3" style="padding-bottom: 8px;">
         <!-- <button id="search-data-button" class="btn btn-default open" type="button" data-toggle="collapse" data-target="#search-input-collapse" aria-expanded="false" aria-controls="search-input-collapse">
           <span>Search IOOS Data</span>
         </button> -->
@@ -34,7 +34,7 @@
   <div class="row">
     <div class="col-md-12">
       <!-- <h1 class="new-title">DATA AND VIEWERS</h1> -->
-      <div class="flip-box col-md-3">
+      <div class="flip-box col-md-3 col-xs-6">
         <div class="flip-box-inner-model-viewer new-design">
           <div class="flip-box-front-model-viewer">
             <h1>IOOS Model Viewer</h1>
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-sanct-sound col-md-3">
+      <div class="flip-box-sanct-sound col-md-3 col-xs-6">
         <div class="flip-box-inner-sanct-sound new-design">
           <div class="flip-box-front-sanct-sound">
             <h1>Sanctuary Soundscape <br>(SanctSound)</h1>
@@ -58,7 +58,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-sensor-map col-md-3">
+      <div class="flip-box-sensor-map col-md-3 col-xs-6">
         <div class="flip-box-inner-sensor-map new-design">
           <div class="flip-box-front-sensor-map">
             <h1>Environmental Sensor Map</h1>
@@ -70,7 +70,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-data-discovery col-md-3">
+      <div class="flip-box-data-discovery col-md-3 col-xs-6">
         <div class="flip-box-inner-data-discovery new-design">
           <div class="flip-box-front-data-discovery">
             <h1>IOOS Data Catalog</h1>
@@ -86,7 +86,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <div class="flip-box-atn col-md-3">
+      <div class="flip-box-atn col-md-3 col-xs-6">
         <div class="flip-box-inner-atn new-design">
           <div class="flip-box-front-atn">
             <h1>Animal Telemetry <br>Network</h1>
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-glider-dac col-md-3">
+      <div class="flip-box-glider-dac col-md-3 col-xs-6">
         <div class="flip-box-inner-glider-dac new-design">
           <div class="flip-box-front-glider-dac">
             <h1>Profiling Gliders</h1>
@@ -110,7 +110,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-hf-radar col-md-3">
+      <div class="flip-box-hf-radar col-md-3 col-xs-6">
         <div class="flip-box-inner-hf-radar new-design">
           <div class="flip-box-front-hf-radar">
             <h1>HF Radar</h1>
@@ -122,7 +122,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-regional-associations col-md-3">
+      <div class="flip-box-regional-associations col-md-3 col-xs-6">
         <div class="flip-box-inner-regional-associations new-design">
           <div class="flip-box-front-regional-associations">
             <h1>Regional Portals</h1>
@@ -138,7 +138,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <div class="flip-box-ioos-by-numbers col-md-3">
+      <div class="flip-box-ioos-by-numbers col-md-3 col-xs-6">
         <div class="flip-box-inner-ioos-by-numbers new-design">
           <div class="flip-box-front-ioos-by-numbers">
             <h1>IOOS By The <br>Numbers</h1>
@@ -150,7 +150,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-compliance-checker col-md-3">
+      <div class="flip-box-compliance-checker col-md-3 col-xs-6">
         <div class="flip-box-inner-compliance-checker new-design">
           <div class="flip-box-front-compliance-checker">
             <h1>Compliance Checker</h1>
@@ -162,7 +162,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-mbon col-md-3">
+      <div class="flip-box-mbon col-md-3 col-xs-6">
         <div class="flip-box-inner-mbon new-design">
           <div class="flip-box-front-mbon">
             <h1>Marine Biodiversity (MBON) Data</h1>
@@ -174,7 +174,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-comt col-md-3">
+      <div class="flip-box-comt col-md-3 col-xs-6">
         <div class="flip-box-inner-comt new-design">
           <div class="flip-box-front-comt">
             <h1>Coastal and Ocean Modeling Testbed</h1>
@@ -190,7 +190,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <div class="flip-box-video-portal col-md-3">
+      <div class="flip-box-video-portal col-md-3 col-xs-6">
         <div class="flip-box-inner-video-portal new-design">
           <div class="flip-box-front-video-portal">
             <h1>Video Portal</h1>
@@ -202,7 +202,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-code-lab col-md-3">
+      <div class="flip-box-code-lab col-md-3 col-xs-6">
         <div class="flip-box-inner-code-lab new-design">
           <div class="flip-box-front-code-lab">
             <h1>CodeLab</h1>
@@ -214,7 +214,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-osmc col-md-3">
+      <div class="flip-box-osmc col-md-3 col-xs-6">
         <div class="flip-box-inner-osmc new-design">
           <div class="flip-box-front-osmc">
             <h1>Observing System Monitoring Center</h1>
@@ -226,7 +226,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-box-oa col-md-3">
+      <div class="flip-box-oa col-md-3 col-xs-6">
         <div class="flip-box-inner-oa new-design">
           <div class="flip-box-front-oa">
             <h1>Ocean Acidification</h1>
@@ -243,11 +243,11 @@
 </div>
 <div>
   <div class="row">
-    <div class="col-md-3 col-md-offset-3">
+    <div class="col-md-3 col-md-offset-3 col-xs-6">
       <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/usioosgov" data-widget-id="711944329313574912">Tweets by @usioosgov</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-5 col-xs-6">
       <div class="fb-page" data-href="https://www.facebook.com/usioosgov" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-height="600" data-show-facepile="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/usioosgov"><a href="https://www.facebook.com/usioosgov">U.S. Integrated Ocean Observing System</a></blockquote></div></div>
     </div>
   </div>
